cmd/account-middleware/k8s/05-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: account-middleware-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: account-middleware-traefik-app
    k8s.kuboard.cn/workload: account-middleware-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-account-middleware-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd
spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/accountmw/v1/goodbenefit_DeleteAccount
            backend:
              serviceName: account-middleware
              servicePort: 50470
          - path: /api/accountmw/v1/payment_CreateAccount
            backend:
              serviceName: account-middleware
              servicePort: 50470
          - path: /api/accountmw/v1/platform_DeleteAccount
            backend:
              serviceName: account-middleware
              servicePort: 50470
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
